[package]
name = "omega-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Omega VPN client — single-session with auto-reconnect"

[dependencies]
omega-core = { path = "../omega-core", features = ["std", "fec"] }

# Crypto
ring = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
ml-kem = { workspace = true }
kem = "0.3.0-pre.0"
rand = "0.8"

# Networking
tokio = { workspace = true }
tun-rs = { workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
socket2 = "0.5"

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = "1"
